syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Cashier.Dtos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "cashier_enums.proto";
import "custom_types.proto";

package edoxa.services.cashier;

message ChallengePayoutDto {
  string challengeId = 1;
  int32 entries = 2;
  CurrencyDto entryFee = 3;
  CurrencyDto prizePool = 4;
  repeated ChallengePayoutBucketDto buckets = 5;
}

message ChallengePayoutBucketDto {
  int32 size = 1;
  customTypes.DecimalValue prize = 2;
}

message BalanceDto {
  EnumCurrencyType currencyType = 1;
  customTypes.DecimalValue available = 2;
  customTypes.DecimalValue pending = 3;
}

message CurrencyDto {
  EnumCurrencyType type = 1;
  customTypes.DecimalValue amount = 2;
}

message TransactionDto {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  CurrencyDto currency = 3;
  string description = 4;
  EnumTransactionType type = 5;
  EnumTransactionStatus status = 6;
}

message TransactionBundleDto {
  int32 id = 1;
  TransactionBundleCurrencyDto currency = 2;
  TransactionBundleCurrencyDto price = 3;
  EnumTransactionType type = 4;
  google.protobuf.StringValue description = 5;
  google.protobuf.StringValue notes = 6;
  bool disabled = 7;
  bool deprecated = 8;

  message TransactionBundleCurrencyDto {
    EnumCurrencyType type = 1;
    int64 amount = 2;
  }
}

message PromotionDto {
  string promotionalCode = 1;
  CurrencyDto currency = 2;
  bool expired = 3;
  bool canceled = 4;
  bool active = 5;
}